# kaizen-loop

./: .gitignore  README.md  justfile  opencode.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/commands/: install.md  release.md
.opencode/skills/kaizen-loop/: SKILL.md
src/kaizen/: __main__.py  agent.py  cli.py  config.py  findings.py  git.py  loop.py  orchestrator.py  review_prompt.py  run.py  steps.py  work_prompt.py
src/kaizen/steps/: __init__.py  pr.py  push.py  review.py
tests/: test_import.py  test_sync_base.py
