[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaizen-loop"
version = "0.6.0"
description = "Continuous code improvement: autonomous work → review → fix → ship"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
kaizen = "kaizen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaizen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
